# sunrise

./: .gitignore  DATASETS.md  INSTRUCTIONS.md  PROJECT_PROPOSALS.md  PROPOSALS.md  README.md  TASK.md  me.md  presentation_appendix.pptx  presentation_new.pptx  presentation_new_short.pptx  presentation_original.pptx  presentation_short.pptx  pyproject.toml  requirements.txt  ~$presentation_new_short.pptx
.github/agents/: make-research.agent.md
.github/skills/: NOTEBOOK_STRUCTURE.md  README.md
case_study/: Case Study Instructions.txt  WiFi Booster Impact.pptx
case_study/Data/: SuperBooster.csv
docs/ab-test-mock-data/: deck.html  deck.md
interview_assignment/: PROPOSALS.md  README.md  presentation_appendix.pptx  presentation_short.pptx
interview_assignment/notebooks/: 01_data_wrangling.ipynb  02_eda.ipynb  06_financial_business_case.ipynb  3.2_psm_ATT.ipynb  config.py  helpers.py
intreview/round 1/: comments.md  job_description.md
intreview/round 3 HR/: comments.md
notebooks/: 01_data_wrangling.ipynb  02_eda.ipynb  03_causal_inference.ipynb  03_naive_model.ipynb  04_logit_ame_model1.ipynb  05_psm_digital_twins.ipynb  06_financial_business_case.ipynb  3.1_naive.ipynb  3.2_logit_AME.ipynb  3.2_psm_ATT.ipynb  ab-test-mock-data.ipynb  config.py  superbooster_causal_analysis.ipynb
roadmap/: CONTEXT.md  LOG.md  ROADMAP.md  phase-1-listen-and-learn.md  phase-2-diagnose-and-align.md  phase-3-act-and-establish.md
sunrise_style/: __init__.py  theme.py
team/: christoph-meier.md  klaus-lamel.md  nathan-siegrist.md  xi-vincie-wang.md
(+28 files in other folders)
