[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sunrise-research-style"
version = "0.1.0"
description = "Shared Sunrise presentation and chart styling for research artifacts."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
]

[tool.setuptools]
packages = ["sunrise_style"]